...
  const [sheetVisible, setSheetVisible] = React.useState(false);
  const [statsVisible, setStatsVisible] = React.useState(false);
  const [resetVisible, setResetVisible] = React.useState(false);
  const [resetRounds, setResetRounds] = React.useState(false);

  return (
    <View style={{ flex: 1, backgroundColor: colors.BGreen }} testID="tasbih-screen">
      <BackgroundSvg2 color={colors.BYellow} />
      <Modal
        animationType="slide"
        transparent={true}
        visible={resetVisible}
        onRequestClose={() => {
...
          </Text>
        </TouchableOpacity>
      )}

      <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
        <TouchableOpacity
          testID="tasbih-counter-button"
          onPressIn={() => {
            const res = increment();
            player.playClick();
            if (res && res.completed) {
              vibrationManager.vibrateForTasbihComplete();
            } else {
...
          }}
          style={{ flex: 1, justifyContent: "center", width: "100%", alignItems: "center" }}
        >
          <View style={{ width: 256, height: 256, alignSelf: "center", justifyContent: "center", alignItems: "center" }}>
            <StarSvgFilled width={256} height={256} />
            <Text
              testID="tasbih-counter-value"
              style={[
                textStyles.base,
                {
                  position: 'absolute',
                  color: colors.primary,
                  fontSize: 32,
...
