...
      {
        Right ?
          <Right /> :
          isHome ?
            <View style={{ flex: 1, justifyContent: 'center' }}>
              <TouchableOpacity
                testID="menu-button"
                onPress={() => navigation.toggleDrawer()}
                style={{ flexDirection: "row" }}
              >
                <Ionicons
                  name="menu"
                  size={30}
...
