...
      </LinearGradient>
    );
  };

  let p = ""
  return (
    <View style={{ flex: 1 }} testID="home-screen">
      {s ? (
        <SearchHeader />
      ) : (
        <AppHeader
          title={t('app.name')}
          isHome={true}
...
