...
                  spacing={80}
                  width={128}
                  height={148}
                />
              </View>
              <TouchableOpacity
                testID="screen3"
                onPress={() => {
                  navigation.navigate("Screen3")
                }}
                style={{
                  // width: "100%",
                  height: 64,
...
